# gateway-computer-vision

./: .gitignore  CMakeLists.txt  README.md  match-settings.xml  match.cpp
arduino/: arduino.ino
