cmake_minimum_required(VERSION 2.8)
project( match C CXX )
find_package( Threads REQUIRED )
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Debug) # RelWithDebInfo)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( match match.cpp )
target_link_libraries( match serial ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
